SERVER-125724 Error when only combination.expression specified (#53590)

GitOrigin-RevId: 0d956accb2cb14693dd4a11a50ef68f4992021fd